--- a/index.html
+++ b/index.html
@@ -26,17 +26,25 @@
     .btn:hover{transform:translateY(-12px) scale(1.1);box-shadow:0 30px 70px rgba(255,107,53,.7);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
-    /* PREVIOUS DESIGN 100% PRESERVED — only fixed the broken inset shadow */
+    /* YOUR EXACT DESIGN — only fixed the text visibility */
     section{
       max-width:1160px;margin:140px auto;padding:80px 40px;
       background:linear-gradient(135deg,rgba(255,255,255,0.13),rgba(255,255,255,0.06));
       backdrop-filter:blur(24px);
       border-radius:36px;
       border:2px solid rgba(255,215,0,0.45);
-      box-shadow:0 30px 90px rgba(0,0,0,0.45), inset 0 0 50px rgba(255,215,0,0.12);
+      box-shadow:0 30px 90px rgba(0,0,0,0.45);
+      position:relative;
       opacity:0;transform:translateY(80px);
       transition:all 1.6s cubic-bezier(0.22,1,0.36,1);
     }
+    section::before{
+      content:'';position:absolute;inset:0;
+      background:rgba(0,0,0,0.22); /* tiny dark overlay so white text pops */
+      border-radius:36px;
+      pointer-events:none;
+    }
+    section > *{position:relative;z-index:2;} /* ensures text stays on top */
     section.visible{opacity:1;transform:translateY(0);}
 
     h2{font-size:3rem;text-align:center;color:#ffd700;margin-bottom:60px;}
@@ -45,15 +53,16 @@
     ul{list-style:none;max-width:880px;margin:70px auto;}
     ul li{font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;opacity:0;transform:translateX(-50px);}
     ul li.visible{opacity:1;transform:translateX(0);transition:all 1s ease-out;}
-    .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;}
+    .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;z-index:3;}
     .checkmark svg{width:100%;height:100%;}
     .checkmark path{fill:none;stroke:#00a86b;stroke-width:8;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:100;stroke-dashoffset:100;}
     .checkmark.visible path{animation:draw 1.2s forwards .4s, pulse 2.5s infinite 2s;}
     @keyframes draw{to{stroke-dashoffset:0;}}
     @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.18)}}
 
-    .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:110px 40px;border-radius:48px;text-align:center;margin:140px auto;box-shadow:0 40px 100px rgba(255,107,53,.65);opacity:0;transform:scale(.88);transition:all 1.8s cubic-bezier(.22,1,.36,0.36,1);}
+    .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:110px 40px;border-radius:48px;text-align:center;margin:140px auto;box-shadow:0 40px 100px rgba(255,107,53,.65);opacity:0;transform:scale(.88);transition:all 1.8s cubic-bezier(.22,1,.36,1);}
     .final-cta.visible{opacity:1;transform:scale(1);}
+
     .whatsapp-float{position:fixed;bottom:32px;right:32px;width:72px;height:72px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:38px;box-shadow:0 12px 40px rgba(37,211,102,.8);z-index:999;animation:float 6s ease-in-out infinite;}
     @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-24px)}}
   </style>
@@ -145,29 +154,26 @@
 <script>
   AOS.init({once:true,duration:1600,easing:'cubic-bezier(0.22,1,0.36,1)'});
 
-  // Africa particle trails + parallax (exactly your previous version)
+  // Africa particles + parallax (unchanged)
   const canvas = document.getElementById('africa-particles');
   const renderer = new THREE.WebGLRenderer({canvas, alpha:true, antialias:true});
-  renderer.setPixelRatio(window.devicePixelRatio);
-  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.setPixelRatio(window.devicePixelRatio); renderer.setSize(window.innerWidth, window.innerHeight);
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 1000);
   camera.position.z = 2.8;
   const loader = new THREE.SVGLoader();
   loader.load('https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg', (data) => {
     const paths = data.paths; const group = new THREE.Group(); const particles = [];
-    paths.forEach(path => {
-      path.toShapes(true).forEach(shape => {
-        const points = shape.getPoints();
-        const geometry = new THREE.BufferGeometry().setFromPoints(points.map(p => new THREE.Vector3(p.x/300 - 1.9, -p.y/300 + 1.3, 0)));
-        const material = new THREE.PointsMaterial({color:0x00a86b,size:4.5,transparent:true,opacity:0.9,blending:THREE.AdditiveBlending,depthWrite:false,sizeAttenuation:true});
-        const ps = new THREE.Points(geometry, material);
-        group.add(ps); particles.push(ps);
-      });
-    });
+    paths.forEach(path => { path.toShapes(true).forEach(shape => {
+      const points = shape.getPoints();
+      const geometry = new THREE.BufferGeometry().setFromPoints(points.map(p => new THREE.Vector3(p.x/300 - 1.9, -p.y/300 + 1.3, 0)));
+      const material = new THREE.PointsMaterial({color:0x00a86b,size:4.5,transparent:true,opacity:0.9,blending:THREE.AdditiveBlending,depthWrite:false,sizeAttenuation:true});
+      const ps = new THREE.Points(geometry, material);
+      group.add(ps); particles.push(ps);
+    });});
     scene.add(group);
     const animate = () => {requestAnimationFrame(animate); group.rotation.z += 0.0005;
-      particles.forEach((p,i)=>p.material.opacity=0.7+Math.sin(Date.now()*0.001+i)*0.3);
+      particles.forEach((p,i=>p.material.opacity=0.7+Math.sin(Date.now()*0.001+i)*0.3);
       renderer.render(scene,camera);
     }; animate();
   });
