--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>TichaAfrica — Teach Smart, Lead Change</title>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
-  <style>
+  <style
     *{margin:0;padding:0;box-sizing:border-box;}
     html{scroll-behavior:smooth;}
     body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;overflow-x:hidden;}
@@ -26,34 +26,27 @@
     .btn:hover{transform:translateY(-12px) scale(1.1);box-shadow:0 30px 70px rgba(255,107,53,.7);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
-    /* YOUR EXACT DESIGN — only fixed the text visibility */
+    /* FINAL FIX — Clean glass cards, text 100% visible */
     section{
       max-width:1160px;margin:140px auto;padding:80px 40px;
-      background:linear-gradient(135deg,rgba(255,255,255,0.13),rgba(255,255,255,0.06));
+      background:rgba(255,255,255,0.09);
       backdrop-filter:blur(24px);
+      -webkit-backdrop-filter:blur(24px);
       border-radius:36px;
       border:2px solid rgba(255,215,0,0.45);
-      box-shadow:0 30px 90px rgba(0,0,0,0.45);
-      position:relative;
+      box-shadow:0 30px 90px rgba(0,0,0,0.5);
       opacity:0;transform:translateY(80px);
       transition:all 1.6s cubic-bezier(0.22,1,0.36,1);
     }
-    section::before{
-      content:'';position:absolute;inset:0;
-      background:rgba(0,0,0,0.22); /* tiny dark overlay so white text pops */
-      border-radius:36px;
-      pointer-events:none;
-    }
-    section > *{position:relative;z-index:2;} /* ensures text stays on top */
     section.visible{opacity:1;transform:translateY(0);}
 
     h2{font-size:3rem;text-align:center;color:#ffd700;margin-bottom:60px;}
     .counter{font-size:clamp(5.5rem,15vw,10rem);font-weight:900;background:linear-gradient(45deg,#00a86b,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;font-variant-numeric:tabular-nums;line-height:1;}
 
     ul{list-style:none;max-width:880px;margin:70px auto;}
-    ul li{font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;opacity:0;transform:translateX(-50px);}
+    ul li{font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#f0f0ff;opacity:0;transform:translateX(-50px);}
     ul li.visible{opacity:1;transform:translateX(0);transition:all 1s ease-out;}
-    .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;z-index:3;}
+    .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;}
     .checkmark svg{width:100%;height:100%;}
     .checkmark path{fill:none;stroke:#00a86b;stroke-width:8;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:100;stroke-dashoffset:100;}
     .checkmark.visible path{animation:draw 1.2s forwards .4s, pulse 2.5s infinite 2s;}
@@ -103,10 +96,12 @@
     Foreign AI is being forced into African classrooms<br>without a single African teacher in the design room.
   </p>
   <p style="text-align:center;font-size:1.9rem;color:#ff6b35;font-weight:bold;">
-    When teachers are told to adopt instead of co-create,<br>we lose their ingenuity, their indigenous wisdom, their magic.
+    When teachers are told to adopt instead of co-create,<br>
+    we lose their ingenuity, their indigenous wisdom, their magic.
   </p>
   <p style="text-align:center;font-size:2.1rem;color:#4ecdc4;margin:50px auto;max-width:860px;">
-    A tool that does not carry the soul of the African teacher<br>will never truly serve the African child.
+    A tool that does not carry the soul of the African teacher<br>
+    will never truly serve the African child.
   </p>
   <p style="text-align:center;font-size:2.7rem;color:#ffd700;font-weight:900;margin-top:60px;">
     That era ends today.<br>With us.
@@ -154,10 +149,11 @@
 <script>
   AOS.init({once:true,duration:1600,easing:'cubic-bezier(0.22,1,0.36,1)'});
 
-  // Africa particles + parallax (unchanged)
+  // Africa particles (unchanged)
   const canvas = document.getElementById('africa-particles');
   const renderer = new THREE.WebGLRenderer({canvas, alpha:true, antialias:true});
-  renderer.setPixelRatio(window.devicePixelRatio); renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.setPixelRatio(window.devicePixelRatio);
+  renderer.setSize(window.innerWidth, window.innerHeight);
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 1000);
   camera.position.z = 2.8;
@@ -173,7 +169,7 @@
     });});
     scene.add(group);
     const animate = () => {requestAnimationFrame(animate); group.rotation.z += 0.0005;
-      particles.forEach((p,i=>p.material.opacity=0.7+Math.sin(Date.now()*0.001+i)*0.3);
+      particles.forEach((p,i)=>p.material.opacity=0.7+Math.sin(Date.now()*0.001+i)*0.3);
       renderer.render(scene,camera);
     }; animate();
   });
