--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>TichaAfrica — Teach Smart, Lead Change</title>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
-  <style
+  <style>
     *{margin:0;padding:0;box-sizing:border-box;}
     html{scroll-behavior:smooth;}
-    body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;overflow-x:hidden;}
+    body{font-family:'Inter',sans-serif;background:#0f0f23;color:#ffffff;overflow-x:hidden;}
 
     .urgency{position:fixed;top:0;left:0;right:0;background:linear-gradient(90deg,#ff6b35,#ffd700,#4ecdc4);color:#0f0f23;padding:16px 20px;font-weight:bold;font-size:1.3rem;text-align:center;z-index:1002;box-shadow:0 4px 20px rgba(0,0,0,0.4);}
     header{position:fixed;top:68px;left:0;right:0;background:rgba(253,253,251,0.98);padding:20px 20px 18px;text-align:center;z-index:1001;box-shadow:0 6px 20px rgba(0,0,0,0.15);border-bottom:4px solid #ffd700;backdrop-filter:blur(12px);}
@@ -20,31 +20,29 @@
     #africa-particles{position:absolute;inset:0;z-index:1;pointer-events:none;}
     .hero-content{position:relative;z-index:3;max-width:960px;}
     .hero h1{font-size:clamp(3rem,9vw,5.8rem);margin-bottom:24px;line-height:1.08;text-shadow:0 0 50px rgba(255,215,0,.9);}
-    .hero p{font-size:1.45rem;max-width:740px;margin:0 auto 32px;opacity:.96;line-height:1.7;}
+    .hero p{font-size:1.45rem;max-width:740px;margin:0 auto 32px;line-height:1.7;}
     .motto{font-size:clamp(2.4rem,8vw,4.8rem);font-weight:900;background:linear-gradient(45deg,#ffd700,#ff6b35,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:40px 0;}
     .btn{display:inline-block;padding:22px 56px;margin:16px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.5rem;box-shadow:0 15px 40px rgba(255,107,53,.5);transition:all .5s;}
     .btn:hover{transform:translateY(-12px) scale(1.1);box-shadow:0 30px 70px rgba(255,107,53,.7);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
-    /* FINAL FIX — Clean glass cards, text 100% visible */
+    /* CLEAN & SAFE SECTION — TEXT 100% VISIBLE */
     section{
       max-width:1160px;margin:140px auto;padding:80px 40px;
-      background:rgba(255,255,255,0.09);
-      backdrop-filter:blur(24px);
-      -webkit-backdrop-filter:blur(24px);
+      background:rgba(15,15,35,0.92);
       border-radius:36px;
       border:2px solid rgba(255,215,0,0.45);
-      box-shadow:0 30px 90px rgba(0,0,0,0.5);
+      box-shadow:0 30px 90px rgba(0,0,0,0.6);
       opacity:0;transform:translateY(80px);
       transition:all 1.6s cubic-bezier(0.22,1,0.36,1);
     }
     section.visible{opacity:1;transform:translateY(0);}
 
     h2{font-size:3rem;text-align:center;color:#ffd700;margin-bottom:60px;}
-    .counter{font-size:clamp(5.5rem,15vw,10rem);font-weight:900;background:linear-gradient(45deg,#00a86b,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;font-variant-numeric:tabular-nums;line-height:1;}
+    .counter{font-size:clamp(5.5rem,15vw,10rem);font-weight:900;background:linear-gradient(45deg,#00a86b,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;line-height:1;}
 
     ul{list-style:none;max-width:880px;margin:70px auto;}
-    ul li{font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#f0f0ff;opacity:0;transform:translateX(-50px);}
+    ul li{font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;opacity:0;transform:translateX(-50px);}
     ul li.visible{opacity:1;transform:translateX(0);transition:all 1s ease-out;}
     .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;}
     .checkmark svg{width:100%;height:100%;}
@@ -55,7 +53,6 @@
 
     .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:110px 40px;border-radius:48px;text-align:center;margin:140px auto;box-shadow:0 40px 100px rgba(255,107,53,.65);opacity:0;transform:scale(.88);transition:all 1.8s cubic-bezier(.22,1,.36,1);}
     .final-cta.visible{opacity:1;transform:scale(1);}
-
     .whatsapp-float{position:fixed;bottom:32px;right:32px;width:72px;height:72px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:38px;box-shadow:0 12px 40px rgba(37,211,102,.8);z-index:999;animation:float 6s ease-in-out infinite;}
     @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-24px)}}
   </style>
@@ -96,12 +93,10 @@
     Foreign AI is being forced into African classrooms<br>without a single African teacher in the design room.
   </p>
   <p style="text-align:center;font-size:1.9rem;color:#ff6b35;font-weight:bold;">
-    When teachers are told to adopt instead of co-create,<br>
-    we lose their ingenuity, their indigenous wisdom, their magic.
+    When teachers are told to adopt instead of co-create,<br>we lose their ingenuity, their indigenous wisdom, their magic.
   </p>
   <p style="text-align:center;font-size:2.1rem;color:#4ecdc4;margin:50px auto;max-width:860px;">
-    A tool that does not carry the soul of the African teacher<br>
-    will never truly serve the African child.
+    A tool that does not carry the soul of the African teacher<br>will never truly serve the African child.
   </p>
   <p style="text-align:center;font-size:2.7rem;color:#ffd700;font-weight:900;margin-top:60px;">
     That era ends today.<br>With us.
@@ -149,26 +144,24 @@
 <script>
   AOS.init({once:true,duration:1600,easing:'cubic-bezier(0.22,1,0.36,1)'});
 
-  // Africa particles (unchanged)
   const canvas = document.getElementById('africa-particles');
   const renderer = new THREE.WebGLRenderer({canvas, alpha:true, antialias:true});
-  renderer.setPixelRatio(window.devicePixelRatio);
-  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.setPixelRatio(window.devicePixelRatio); renderer.setSize(window.innerWidth, window.innerHeight);
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 1000);
   camera.position.z = 2.8;
   const loader = new THREE.SVGLoader();
   loader.load('https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg', (data) => {
     const paths = data.paths; const group = new THREE.Group(); const particles = [];
-    paths.forEach(path => { path.toShapes(true).forEach(shape => {
-      const points = shape.getPoints();
-      const geometry = new THREE.BufferGeometry().setFromPoints(points.map(p => new THREE.Vector3(p.x/300 - 1.9, -p.y/300 + 1.3, 0)));
-      const material = new THREE.PointsMaterial({color:0x00a86b,size:4.5,transparent:true,opacity:0.9,blending:THREE.AdditiveBlending,depthWrite:false,sizeAttenuation:true});
-      const ps = new THREE.Points(geometry, material);
+    paths.forEach(p=>{p.toShapes(true).forEach(s=>{
+      const pts = s.getPoints();
+      const geom = new THREE.BufferGeometry().setFromPoints(pts.map(p=>new THREE.Vector3(p.x/300-1.9,-p.y/300+1.3,0)));
+      const mat = new THREE.PointsMaterial({color:0x00a86b,size:4.5,transparent:true,opacity:0.9,blending:THREE.AdditiveBlending,depthWrite:false,sizeAttenuation:true});
+      const ps = new THREE.Points(geom,mat);
       group.add(ps); particles.push(ps);
     });});
     scene.add(group);
-    const animate = () => {requestAnimationFrame(animate); group.rotation.z += 0.0005;
+    const animate=()=>{requestAnimationFrame(animate); group.rotation.z+=0.0005;
       particles.forEach((p,i)=>p.material.opacity=0.7+Math.sin(Date.now()*0.001+i)*0.3);
       renderer.render(scene,camera);
     }; animate();
@@ -176,12 +169,12 @@
   window.addEventListener('scroll',()=>{canvas.style.transform=`translateY(${window.scrollY*0.4}px)`;});
   window.addEventListener('resize',()=>{camera.aspect=window.innerWidth/window.innerHeight; camera.updateProjectionMatrix(); renderer.setSize(window.innerWidth,window.innerHeight);});
 
-  document.getElementById('counter').textContent = '1,247';
+  document.getElementById('counter').textContent='1,247';
 
-  const observer = new IntersectionObserver(e=>e.forEach(entry=>{if(entry.isIntersecting){entry.target.classList.add('visible');
-    entry.target.querySelectorAll('li').forEach((li,i)=>setTimeout(()=>li.classList.add('visible'),i*200));
+  const obs = new IntersectionObserver(e=>e.forEach(en=>{if(en.isIntersecting){en.target.classList.add('visible');
+    en.target.querySelectorAll('li').forEach((li,i)=>setTimeout(()=>li.classList.add('visible'),i*200));
   }}),{threshold:0.2});
-  document.querySelectorAll('section, .final-cta').forEach(el=>observer.observe(el));
+  document.querySelectorAll('section,.final-cta').forEach(el=>obs.observe(el));
 </script>
 </body>
 </html>
