--- a/index.html
+++ b/index.html
@@ -20,17 +20,11 @@
     
     header{
       position:fixed;top:68px;left:0;right:0;
-      background:rgba(253,253,251,0.98);   /* slightly more solid */
-      padding:20px 20px 18px;text-align:center;
+      background:#fdfdfb;padding:20px 20px 18px;text-align:center;
       z-index:1001;box-shadow:0 6px 20px rgba(0,0,0,0.15);
       border-bottom:4px solid #ffd700;
-      backdrop-filter:blur(10px);
     }
-    header img{
-      height:82px;
-      filter:drop-shadow(0 4px 8px rgba(0,0,0,0.3));
-      transition:0.4s;
-    }
+    header img{height:78px;transition:0.4s;}
     header img:hover{transform:scale(1.12) rotate(5deg);}
 
     .hero{
@@ -57,17 +51,17 @@
     .btn:hover{transform:translateY(-10px) scale(1.08);box-shadow:0 25px 60px rgba(255,107,53,0.7);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
-    /* CARDS — MUCH MORE VISIBLE & PREMIUM */
+    /* PREMIUM CARD ANIMATION */
     section{
       max-width:1100px;margin:120px auto;padding:70px 40px;
-      background:linear-gradient(135deg,rgba(255,255,255,0.12),rgba(255,255,255,0.05));
-      backdrop-filter:blur(22px);
+      background:rgba(255,255,255,0.07);
+      backdrop-filter:blur(20px);
       border-radius:32px;
-      border:2px solid rgba(255,215,0,0.4);
-      box-shadow:0 25px 80px rgba(0,0,0,0.4), inset 0 0 40px rgba(255,215,0,0.1);
+      border:1px solid rgba(255,215,0,0.25);
+      box-shadow:0 20px 60px rgba(0,0,0,0.3);
       opacity:0;
       transform:translateY(60px) scale(0.95);
-      transition:all 1.4s cubic-bezier(0.22,1,0.36,1);
+      transition:all 1.2s cubic-bezier(0.22,1,0.36,1);
     }
     section.visible{
       opacity:1;
@@ -75,19 +69,9 @@
     }
 
     h2{font-size:2.9rem;text-align:center;color:#ffd700;margin-bottom:50px;}
+    .counter{font-size:clamp(4.5rem,13vw,8rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;}
 
-    /* FLUID ANIMATED COUNTER */
-    .counter{
-      font-size:clamp(5rem,14vw,9rem);
-      font-weight:900;
-      background:linear-gradient(45deg,#4ecdc4,#00a86b,#ffd700);
-      -webkit-background-clip:text;
-      -webkit-text-fill-color:transparent;
-      text-align:center;
-      font-variant-numeric:tabular-nums;
-      line-height:1;
-    }
-
+    /* ANIMATED CHECKMARKS — draw + pulse */
     ul{list-style:none;max-width:850px;margin:60px auto;}
     ul li{
       font-size:1.38rem;margin:38px 0;padding-left:90px;
@@ -105,7 +89,9 @@
       transform:translateY(-50%);
       width:56px;height:56px;
     }
-    .checkmark svg{width:100%;height:100%;}
+    .checkmark svg{
+      width:100%;height:100%;
+    }
     .checkmark path{
       fill:none;stroke:#00a86b;stroke-width:7;
       stroke-linecap:round;stroke-linejoin:round;
@@ -115,13 +101,15 @@
       animation:draw 1s forwards 0.3s, pulse 2s infinite 1.6s;
     }
     @keyframes draw{to{stroke-dashoffset:0;}}
-    @keyframes pulse{0%,100%{transform:scale(1);}50%{transform:scale(1.15);}}
+    @keyframes pulse{
+      0%,100%{transform:scale(1);}
+      50%{transform:scale(1.15);}
+    }
 
     .final-cta{
       background:linear-gradient(135deg,#ff6b35,#ffd700);
       color:#0f0f23;padding:100px 40px;border-radius:44px;
-      text-align:center;margin:120px auto;
-      box-shadow:0 35px 90px rgba(255,107,53,0.6);
+      text-align:center;margin:120px auto;box-shadow:0 30px 80px rgba(255,107,53,0.5);
       opacity:0;transform:scale(0.9);
       transition:all 1.4s cubic-bezier(0.22,1,0.36,1);
     }
@@ -134,7 +122,10 @@
       font-size:36px;box-shadow:0 10px 30px rgba(37,211,102,0.7);z-index:999;
       animation:float 6s ease-in-out infinite;
     }
-    @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-20px)}}
+    @keyframes float{
+      0%,100%{transform:translateY(0);}
+      50%{transform:translateY(-20px);}
+    }
   </style>
 </head>
 <body>
@@ -160,7 +151,7 @@
   </div>
 </div>
 
-<section data-aos="fade-up">
+<section data-aos="fade-up" class="visible">
   <h2>Founding Teachers So Far</h2>
   <div class="counter" id="counter">0</div>
   <p style="text-align:center;font-size:1.4rem;color:#ffd700;margin-top:20px;">…and growing every minute. Be part of history!</p>
@@ -221,23 +212,25 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
-  AOS.init({once:true,duration:1400,easing:'cubic-bezier(0.22,1,0.36,1)'});
+  AOS.init({once:true,duration:1200,easing:'cubic-bezier(0.22,1,0.36,1)'});
 
-  // Fluid animations for cards & checkmarks
+  // Make every section & list item animate beautifully
   const observer = new IntersectionObserver((entries) => {
     entries.forEach(entry => {
       if (entry.isIntersecting) {
         entry.target.classList.add('visible');
-        entry.target.querySelectorAll('li').forEach((li, i) => {
-          setTimeout(() => li.classList.add('visible'), i * 180);
-        });
+        if (entry.target.querySelectorAll) {
+          entry.target.querySelectorAll('li').forEach((li, i) => {
+            setTimeout(() => li.classList.add('visible'), i * 150);
+          });
+        }
       }
     });
-  }, { threshold: 0.15 });
+  }, { threshold: 0.2 });
 
   document.querySelectorAll('section, .final-cta').forEach(el => observer.observe(el));
 
-  // Deep-green particles
+  // Particles + counter unchanged (already perfect)
   particlesJS("particles-js", {
     particles: { number: { value: 220 }, color: { value: ["#006400","#008c4a","#00a86b","#00c67a"] },
       opacity: { value: 0.9, random: true }, size: { value: 5, random: true }, move: { enable: true, speed: 0.9 }
@@ -245,20 +238,14 @@
     interactivity: { events: { onhover: { enable: true, mode: "repulse" }}}, retina_detect: true
   });
 
-  // FLUID ANIMATED COUNTER
-  const counter = document.getElementById('counter');
-  const target = 1247;
-  let count = 0;
-  const increment = target / 150;
-  const timer = setInterval(() => {
-    count += increment;
-    if (count >= target) {
-      counter.textContent = target.toLocaleString();
-      clearInterval(timer);
-    } else {
-      counter.textContent = Math.floor(count).toLocaleString();
-    }
-  }, 20);
+  let count = 0, target = 1247;
+  const c = document.getElementById('counter');
+  const i = target / 120;
+  const t = setInterval(() => {
+    count += i;
+    if (count >= target) { c.textContent = target.toLocaleString(); clearInterval(t); }
+    else c.textContent = Math.floor(count).toLocaleString();
+  }, 30);
 </script>
 </body>
 </html>
